Pass sql/core releated cases